feat: 完成数据库设计与基础API实现，添加种子数据和文档更新
- 完成SQLite数据库模型设计与初始迁移
- 实现健康检查及数据统计、文章、分类、标签等基础API端点
- 增加数据库管理类及连接测试功能
- 添加Docker数据库服务配置及管理脚本
- 创建完整种子数据包括用户、文章、标签、分类、评论和点赞
- 新增详尽的数据库配置与学习指南文档
- 定义后端类型和接口规范，提高类型安全性

--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
     "lint": "pnpm --filter backend lint && pnpm --filter frontend lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "clean": "rimraf backend/dist backend/node_modules frontend/dist frontend/node_modules node_modules",
+    "db:up": "docker-compose -f docker/docker-compose.yml up -d postgres",
+    "db:down": "docker-compose -f docker/docker-compose.yml down",
+    "db:logs": "docker-compose -f docker/docker-compose.yml logs -f postgres",
+    "db:generate": "pnpm --filter backend db:generate",
     "db:migrate": "pnpm --filter backend db:migrate",
     "db:seed": "pnpm --filter backend db:seed",
     "db:studio": "pnpm --filter backend db:studio",
-    "docker:dev": "docker-compose -f docker/docker-compose.dev.yml up -d",
-    "docker:prod": "docker-compose -f docker/docker-compose.prod.yml up -d",
-    "docker:down": "docker-compose -f docker/docker-compose.dev.yml down && docker-compose -f docker/docker-compose.prod.yml down"
+    "db:reset": "pnpm --filter backend db:reset",
+    "docker:dev": "docker-compose -f docker/docker-compose.yml up -d",
+    "docker:prod": "docker-compose -f docker/docker-compose.yml up -d",
+    "docker:down": "docker-compose -f docker/docker-compose.yml down"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
