--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,12 @@
     "db:studio": "prisma studio",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
-    "db:reset": "prisma migrate reset"
+    "db:reset": "prisma migrate reset",
+    "db:deploy": "prisma migrate deploy",
+    "db:up": "docker-compose -f ../docker/docker-compose.yml up -d postgres",
+    "db:down": "docker-compose -f ../docker/docker-compose.yml down",
+    "db:logs": "docker-compose -f ../docker/docker-compose.yml logs -f postgres",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@prisma/client": "^5.7.0",
