feat: 添加完整部署与运维支持
- 新增 GitHub Actions CI/CD 流水线，实现自动测试和 Docker 镜像构建推送
- 新增 Dockerfile 和 docker-compose.yml，支持容器化部署和多服务编排
- 新增环境变量示例文件，规范配置管理
- 新增日志管理与监控中间件，实现结构化请求日志、性能监控和健康检查接口
- 新增部署与监控运维文档，详细说明环境配置、容器化、CI/CD 和监控告警方案
- 完成学习进度更新，标记部署与运维阶段为完成

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,28 +1,19 @@
-# 应用配置
-NODE_ENV=development
-PORT=3001
-FRONTEND_URL=http://localhost:3000
+# 服务器配置
+PORT=3000
+NODE_ENV=development # development, production, test
 
-# 数据库配置
-DATABASE_URL="postgresql://username:password@localhost:5432/myblog_dev"
+# 数据库配置 (Prisma)
+# 格式: file:./dev.db (SQLite) 或 postgresql://user:password@localhost:5432/mydb (PostgreSQL)
+DATABASE_URL="file:./dev.db"
 
-# JWT 密钥
-JWT_SECRET=your-super-secret-jwt-key-here-change-in-production
-JWT_EXPIRES_IN=7d
+# JWT认证配置
+# 生产环境请使用强随机字符串 (例如: openssl rand -base64 32)
+JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
+JWT_EXPIRES_IN="7d"
 
-# 邮件配置 (可选)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
+# 跨域配置 (CORS)
+# 允许的前端域名，生产环境应指定具体域名
+CORS_ORIGIN="http://localhost:5173"
 
-# 文件上传配置 (可选)
-UPLOAD_DIR=uploads
-MAX_FILE_SIZE=5242880
-
-# Redis 配置 (可选，用于缓存)
-REDIS_URL=redis://localhost:6379
-
-# 日志配置
-LOG_LEVEL=info
-LOG_FILE=logs/app.log
+# 日志级别
+LOG_LEVEL="info" # debug, info, warn, error
