chore: 添加winston日志库，更新数据库配置，新增前端Dockerfile
- 引入winston及其类型定义用于日志管理
- 将数据库连接配置改为环境变量
- 修改跨域配置环境变量名
- 新增前端项目Dockerfile支持容器化部署

--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "express-rate-limit": "^7.4.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -34,6 +35,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.1",
+    "@types/winston": "^2.4.4",
     "prisma": "^5.22.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
