chore: 切换默认数据库为SQLite并调整Docker配置
将默认数据库改为SQLite，更新.env.example和docker-compose.yml配置，移除PostgreSQL服务，调整Dockerfile支持SQLite数据库路径，新增日志目录自动创建。

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,8 +3,8 @@ PORT=3000
 NODE_ENV=development # development, production, test
 
 # 数据库配置 (Prisma)
-# 格式: file:./dev.db (SQLite) 或 postgresql://user:password@localhost:5432/mydb (PostgreSQL)
-DATABASE_URL="file:./dev.db"
+# SQLite 数据库文件路径
+DATABASE_URL="file:/app/data/dev.db"
 
 # JWT认证配置
 # 生产环境请使用强随机字符串 (例如: openssl rand -base64 32)
