--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+      args:
+        DATABASE_URL: file:./prisma/dev.db
     container_name: myblog-backend
     restart: always
     ports:
@@ -13,31 +15,17 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3000
-      # 连接到下面的 postgres 服务
-      - DATABASE_URL=postgresql://blog_user:blog_password@postgres:5432/blog_db?schema=public
+      - DATABASE_URL=file:/app/data/dev.db
       - JWT_SECRET=${JWT_SECRET}
       - CORS_ORIGIN=${CORS_ORIGIN}
-    depends_on:
-      - postgres
-    networks:
-      - blog-network
-
-  # 数据库服务 (PostgreSQL)
-  postgres:
-    image: postgres:15-alpine
-    container_name: myblog-db
-    restart: always
-    environment:
-      - POSTGRES_USER=blog_user
-      - POSTGRES_PASSWORD=blog_password
-      - POSTGRES_DB=blog_db
+      - LOG_LEVEL=info
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - backend_data:/app/data
     networks:
       - blog-network
 
 volumes:
-  postgres_data:
+  backend_data:
 
 networks:
   blog-network:
