chore: 在后端镜像中添加 OpenSSL 依赖
为满足 Prisma 引擎运行需求，安装 OpenSSL 依赖。

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -27,6 +27,9 @@ RUN npm run build
 # 阶段2：运行阶段
 FROM node:18-alpine AS runner
 
+# 安装 OpenSSL（Prisma 引擎需要）
+RUN apk add --no-cache openssl
+
 # 设置工作目录
 WORKDIR /app
 
