--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,7 +4,8 @@ FROM node:18-alpine AS builder
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm ci
+RUN npm config set registry https://registry.npmmirror.com
+RUN npm install
 
 COPY . .
 
